--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,8 @@
-.header {
-    background: rgb(255, 255, 255) !important;
-    background: -moz-linear-gradient(180deg, rgba(255, 255, 255, 1) 60%, rgba(255, 255, 255, 0) 100%) !important;
-    background: -webkit-linear-gradient(180deg, rgba(255, 255, 255, 1) 60%, rgba(255, 255, 255, 0) 100%) !important;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 60%, rgba(255, 255, 255, 0) 100%) !important;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff", endColorstr="#ffffff", GradientType=1) !important;
+.header,
+.logo-image {
+    background: rgb(255, 254, 254) !important;
+    background: -moz-linear-gradient(0deg, rgba(255, 254, 254, 0) 0%, rgba(255, 254, 254, 0.33126754119616597) 10%, rgba(255, 254, 254, 0.6617997540813201) 20%, rgba(255, 254, 254, 0.9755252442773985) 40%, rgba(255, 254, 254, 1) 100%) !important;
+    background: -webkit-linear-gradient(0deg, rgba(255, 254, 254, 0) 0%, rgba(255, 254, 254, 0.33126754119616597) 10%, rgba(255, 254, 254, 0.6617997540813201) 20%, rgba(255, 254, 254, 0.9755252442773985) 40%, rgba(255, 254, 254, 1) 100%) !important;
+    background: linear-gradient(0deg, rgba(255, 254, 254, 0) 0%, rgba(255, 254, 254, 0.33126754119616597) 10%, rgba(255, 254, 254, 0.6617997540813201) 20%, rgba(255, 254, 254, 0.9755252442773985) 40%, rgba(255, 254, 254, 1) 100%) !important;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fffefe", endColorstr="#fffefe", GradientType=1) !important;
 }
