--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,42 @@
 /* 
   Import fonts
 */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&family=Poppins:wght@400;500;600;800&display=swap');
+
 /*
   1. Use a more-intuitive box-sizing model.
 */
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
+
 /*
   2. Remove default margin
 */
 * {
   margin: 0;
 }
+
 /*
   3. Allow percentage-based heights in the application
 */
-html, body {
-  height: 100%;
+html,
+body {
+  max-width: 100%;
+  min-height: 100vh;
   font-family: 'Poppins';
+  overflow-x: hidden;
+  padding: 0 !important;
+  margin: 0 !important;
 }
+
+header, 
+footer {
+  padding: 0 !important;
+}
+
 /*
   Typographic tweaks!
   4. Add accessible line-height
@@ -31,28 +47,75 @@ body {
   -webkit-font-smoothing: antialiased;
   background-color: #f1f1f1;
 }
+
+body ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
 /*
   6. Improve media defaults
 */
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
+
 /*
   7. Remove built-in form typography styles
 */
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
+
 /*
   8. Avoid text overflows
 */
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
+
 /*
   9. Create a root stacking context
 */
-#root, #__next {
+#root,
+#__next {
   isolation: isolate;
+  height: 100%;
+}
+
+#root {
+  display: grid;
+  grid-template-columns: 1.5em 1fr 1.5em;
+  grid-template-areas:
+    "header header header"
+    "main main main"
+    "footer footer footer"
+  ;
+}
+
+header {
+  grid-area: header;
+}
+
+main {
+  grid-area: main;
+}
+
+footer {
+  grid-area: footer;
 }
